--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "connected-react-router": "6.5.2",
     "jwt-decode": "2.2.0",
     "react": "16.9.0",
